plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    mavenCentral()
    maven {
        url = uri("https://repo.extendedclip.com/content/repositories/placeholderapi/")
    }
    maven {
        url = uri("https://hub.spigotmc.org/nexus/content/repositories/snapshots/")
    }
    maven {
        url = uri'https://libraries.minecraft.net/'
    }
}


dependencies {
    compileOnly group: 'io.netty', name: 'netty-all', version: '4.1.77.Final'
    compileOnly group: 'com.mojang', name: 'authlib', version: '1.5.21'
    compileOnly group: 'com.mojang', name: 'datafixerupper', version: '3.0.25'

    compileOnly group: 'org.spigotmc', name: 'spigot-api', version: '1.19.2-R0.1-SNAPSHOT'
    compileOnly group: 'me.clip' , name:'placeholderapi' , version: '2.9.2'
}

tasks.withType(JavaCompile) {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    options.encoding = 'UTF-8'
}

jar {
    archiveBaseName = 'znpcs-rk-4.1'
    destinationDirectory = file(".")
}